# mev-design

./: .gitignore  Cargo.toml  README.md  taplo.toml
bins/lst-mev/: Cargo.toml
bins/lst-mev/src/: main.rs
bins/mempool-monitor/: Cargo.toml
bins/mempool-monitor/src/: main.rs  pool.rs  utils.rs
contracts/src/: Simulator.sol
contracts/src/interfaces/: IBalancerV2Pool.sol  IBalancerV2Vault.sol  ICurveV2Pool.sol  IERC20.sol  IERC4626.sol  IMevEth.sol  IUniswapV3Pool.sol  IWETH.sol
contracts/test/: Simulator.t.sol
crates/evm-fork-db/: Cargo.toml
crates/evm-fork-db/src/: backend.rs  cache.rs  database.rs  error.rs  lib.rs  types.rs
crates/shared/: Cargo.toml
crates/shared/src/: logging.rs  utils.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: abi.rs  bytecode.rs  evm.rs  lib.rs
crates/simulator/src/traits/: mod.rs  simulator.rs  uniswap_v3.rs
